fix: VNPAY sandbox local setup and payment API contract
- VnpayUrlService + buyer paymentUrl uses signed sandbox URL

- GET /payment/create returns 405; POST unchanged

- 503 + docs when VNPAY keys missing; example properties + PAYMENTS-VNPAY

Made-with: Cursor